♻️ decouple mongo from db
